# icde2026

./: README.md
kannolo/: .gitignore  Cargo.toml
kannolo/docs/: RunExperiments.md
kannolo/experiments/best_configs/msmarco-v1/splade-cocondenser/svb_grid/: cocondenser_svb_grid_dp8_m16_k100_best.toml  cocondenser_svb_grid_dp8_m16_k10_best.toml  cocondenser_svb_grid_dp8_m32_k100_best.toml  cocondenser_svb_grid_dp8_m32_k10_best.toml  cocondenser_svb_grid_dp8_m8_k100_best.toml  cocondenser_svb_grid_dp8_m8_k10_best.toml  cocondenser_svb_grid_f16_m16_k100_best.toml  cocondenser_svb_grid_f16_m16_k10_best.toml  cocondenser_svb_grid_f16_m32_k100_best.toml  cocondenser_svb_grid_f16_m32_k10_best.toml  cocondenser_svb_grid_f16_m8_k100_best.toml  cocondenser_svb_grid_f16_m8_k10_best.toml
kannolo/experiments/best_configs/msmarco-v1/splade-lilsr-big/svb_grid/: lilsr-big_svb_grid_blocksparse_m32_k100_best.toml  lilsr-big_svb_grid_blocksparse_m32_k10_best.toml  lilsr-big_svb_grid_dp8_m32_k100_best.toml  lilsr-big_svb_grid_dp8_m32_k10_best.toml  lilsr-big_svb_grid_f16_m32_k100_best.toml  lilsr-big_svb_grid_f16_m32_k10_best.toml  lilsr-big_svb_grid_sparseq_m32_k100_best.toml  lilsr-big_svb_grid_sparseq_m32_k10_best.toml
kannolo/experiments/best_configs/msmarco-v1/splade-v3/svb_grid/: splade_v3_svb_grid_dp8_m16_k100_best.toml  splade_v3_svb_grid_dp8_m16_k10_best.toml  splade_v3_svb_grid_dp8_m32_k100_best.toml  splade_v3_svb_grid_dp8_m32_k10_best.toml  splade_v3_svb_grid_dp8_m8_k100_best.toml  splade_v3_svb_grid_dp8_m8_k10_best.toml  splade_v3_svb_grid_f16_m16_k100_best.toml  splade_v3_svb_grid_f16_m16_k10_best.toml  splade_v3_svb_grid_f16_m32_k100_best.toml  splade_v3_svb_grid_f16_m32_k10_best.toml  splade_v3_svb_grid_f16_m8_k100_best.toml  splade_v3_svb_grid_f16_m8_k10_best.toml
kannolo/experiments/icde2026/: kannolo_table_reproducibility.md
kannolo/scripts/: gather_grid_search_results.py  requirements.txt  run_experiments.py
kannolo/src/: visited_set.rs
kannolo/src/graph/: egb.rs  graph.rs  mod.rs  neighbors.rs
kannolo/src/indexes/: hnsw.rs
kannolo/src/indexes/hnsw_utils/: mod.rs
seismic/: .gitignore  Cargo.toml
seismic/experiments/ICDE2026/: seismic_table_reproducibility.md
seismic/experiments/ICDE2026/msmarco-v1-lilsr/: best_99_k10.toml
seismic/scripts/: requirements.txt  run_experiments.py  run_grid_search.py
seismic/src/: configurations.rs  inverted_index.rs  lib.rs  posting_list.rs
(+51 files in other folders)
