[package]
name = "kannolo"
version = "0.5.0-repro-graph-compression"
edition = "2024"
license = "MIT"
description = "kANNolo is designed for easy prototyping of ANN Search algorithms while ensuring high effectiveness and efficiency over both dense and sparse vectors."
repository = "https://github.com/TusKANNy/kannolo"
readme = "README.md"


[dependencies]
serde       = { version = "1.0.219", features = ["derive"] }
rand        = "0.8.5"
itertools   = "0.14.0"
matrixmultiply = "0.3.8"
num-traits  = "0.2.18"
byteorder   = "1.5.0"
half        = { version = "2.4.1", features = ["serde", "std", "num-traits"] }
rayon       = "1.10.0"
bitvec      = "1.0.1"
bincode     = "2.0.1"
rustc-hash  = "2.1.0"
nohash-hasher = "0.2.0"
optional    = { version = "0.5.0", features = ["serde"] }
vectorium   = { git = "https://github.com/TusKANNy/vectorium.git", branch = "feature/quantization" }
indicatif   = { version = "0.18.3", features = ["rayon"] }
anyhow      = "1.0.86"
csv         = "1.3.0"
tantivy-bitpacker = "0.8.0"
mem_dbg     = "0.3"
postcard    = { version = "1", features = ["alloc"] }
dsi-bitstream = "0.9.2"
rgb = { git = "https://github.com/JMMackenzie/enhanced-graph-bisection.git", package = "rgbisect" }
toolkit     = { git = "https://github.com/rossanoventurini/toolkit.git", branch = "streamvbyte_blocks", features = ["streamvbyte"] }
clap        = { version = "4.3.19", features = ["derive"], optional = true }
pyo3        = { version = "0.24.0", features = ["extension-module"], optional = true }
numpy       = { version = "0.24.0", optional = true }
ndarray     = { version = "0.16", optional = true }
ndarray-npy = { version = "0.9", optional = true }


[features]
default      = []
use-libxsmm  = []
multivec     = ["vectorium/multivec"]
python       = ["dep:pyo3", "dep:numpy", "dep:ndarray", "dep:ndarray-npy"]
cli          = ["dep:clap", "dep:ndarray", "dep:ndarray-npy", "multivec"]

[[bin]]
name = "hnsw_build"
path = "src/bin/hnsw_build.rs"
required-features = ["cli"]

[[bin]]
name = "hnsw_compress_search"
path = "src/bin/hnsw_compress_search.rs"
required-features = ["cli"]

[[bin]]
name = "hnsw_egb_permutation"
path = "src/bin/hnsw_egb_permutation.rs"
required-features = ["cli"]

[lib]
name = "kannolo"
crate-type = ["cdylib", "lib"]

[profile.release]
opt-level = 3
debug = false
lto = false
codegen-units = 1
panic = "abort"
strip = "symbols"
